<resources>
    <string name="app_name">Roomates</string>
    <string name="title_activity_auth">Authentication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username_email">Username/Email</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
